Fix bugs + clean code made menu responsive Auto start next quiz on menu selection fix lessons not showing that were smaller than no of quiz options Moduled out Megaquiz to own page

--- a/MedinaArabic/Quiz/style.css
+++ b/MedinaArabic/Quiz/style.css
@@ -36,6 +36,7 @@ section {
     align-items: center;
     background-color: rgba(210, 156, 156, 0.09);
     text-align: center;
+    margin: 1em 0;
 }
 
 body.correct {
@@ -69,7 +70,7 @@ body.wrong {
     /* height: 5em; */
     --hue: var(--hue-neutral);
     border: 1px solid hsl(var(--hue), 100%, 20%);
-    background-color: hsl(var(--hue), 80%, 30%);
+    background-color: hsl(var(--hue), 20%, 30%);
     border-radius: 5px;
     padding: 5px 10px;
     color: rgb(208, 208, 208);
@@ -81,12 +82,14 @@ body.wrong {
     border-color: hsl(var(--hue), 100%, 10%);
     border-radius: 8px;
     color: rgb(242, 242, 242);
-    text-shadow: 0 0 4px #1100ff;
+    text-shadow: 0 0 4px #393838f9;
+    cursor: pointer;
 }
 
 .btn.correct {
     --hue: var(--hue-correct);
     color: black;
+    text-shadow: 0 0 4px #f4f4f4;
 }
 
 .btn.wrong {
@@ -132,7 +135,8 @@ body.wrong {
 
 .optionchoice:hover {
     border:1px dashed lightgray; 
-    color: lightgrey
+    color: lightgrey;
+    cursor: pointer;
 }
 
 .flexgrid{
@@ -144,16 +148,60 @@ body.wrong {
     flex-wrap: wrap;
 }
 
-.lessonmenu {
-    display: flex;
-    display: grid;
-    grid-template-columns: repeat(10, auto);
-    /* width: 30vw; */
-    gap: 1px;
-    margin: 8px 0;
-    text-align: center;
-}
 
 .lessonmenuitem:hover{
-    background-color: hsl(var(--hue), 100%, 50%);
+    background-color: rgba(12, 151, 161, 0.479);
+    cursor: pointer;
+    /* background-color: hsl(var(--hue), 100%, 50%); */
 }
+
+.lessonmenuitem{
+    max-width: 3em;
+    width: 3em;
+    margin:0;
+}
+
+
+.lessonmenu {
+    max-width: 3em;
+    width: 3em;
+    display: flex;
+    flex-direction: column;
+    /* display: grid; */
+    /* grid-template-columns: repeat(10, auto); */
+    /* width: 30vw; */
+    /* gap: 2px; */
+    margin: 1em 0;
+    /* padding-left: .5em; */
+    text-align: left;
+    margin:0
+}
+
+.flex {
+    display: flex;
+    flex-direction: row;
+}
+
+main{
+    width: 100%;
+    padding: .5em 1em;
+    /* margin-right: 1em; */
+}
+@media only screen and (max-width: 600px) {
+    /* body {
+      background-color: lightblue;
+    } */
+    .lessonmenu {
+        /* display: flex; */
+        display: grid;
+        grid-template-columns: repeat(10, auto);
+        /* width: 30vw; */
+        gap: 2px;
+        margin: 1em 0;
+        text-align: center;
+        /* height: max-content; */
+    }
+    .flex{
+        display: block;
+    }
+  }
